tests/ui/macros/issue-111749.stderr
error: removing an expression is not supported in this position
  --> $DIR/issue-111749.rs:8:17
   |
LL |     cbor_map! { #[test(test)] 4};
   |                 ^^^^^^^^^^^^^

error: attribute must be of the form `#[test]`
  --> $DIR/issue-111749.rs:8:17
   |
LL |     cbor_map! { #[test(test)] 4};
   |                 ^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(ill_formed_attribute_input)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 2 previous errors

Future incompatibility report: Future breakage diagnostic:
error: attribute must be of the form `#[test]`
  --> $DIR/issue-111749.rs:8:17
   |
LL |     cbor_map! { #[test(test)] 4};
   |                 ^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
   = note: `#[deny(ill_formed_attribute_input)]` (part of `#[deny(future_incompatible)]`) on by default

